# librepods

android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  l2c_fcr_hook.cpp
android/app/src/main/java/me/kavishdevar/librepods/: MainActivity.kt
android/app/src/main/java/me/kavishdevar/librepods/bluetooth/: AACPManager.kt
android/app/src/main/java/me/kavishdevar/librepods/composables/: BatteryView.kt  NoiseControlSettings.kt  StyledScaffold.kt
android/app/src/main/java/me/kavishdevar/librepods/constants/: Packets.kt
android/app/src/main/java/me/kavishdevar/librepods/data/: ControlCommandRepository.kt
android/app/src/main/java/me/kavishdevar/librepods/presentation/components/: BatteryIndicator.kt
android/app/src/main/java/me/kavishdevar/librepods/presentation/overlays/: PopupWindow.kt
android/app/src/main/java/me/kavishdevar/librepods/screens/: AccessibilitySettingsScreen.kt  AirPodsSettingsScreen.kt  AppSettingsScreen.kt  DebugScreen.kt  HeadTrackingScreen.kt  HearingAidScreen.kt  TransparencySettingsScreen.kt  TroubleshootingScreen.kt  UpdateHearingTestScreen.kt
android/app/src/main/java/me/kavishdevar/librepods/services/: AirPodsService.kt
android/app/src/main/java/me/kavishdevar/librepods/utils/: ATTManager.kt  SystemAPIUtils.kt
android/app/src/main/java/me/kavishdevar/librepods/viewmodel/: AirPodsViewModel.kt
android/app/src/xposed/cpp/: l2c_fcr_hook.cpp
android/gradle/: libs.versions.toml
linux-rust/src/: main.rs  utils.rs
linux-rust/src/devices/: airpods.rs
linux-rust/src/ui/: window.rs
(+2 files in other folders)
